--- a/Задачи с листа №2.ipynb
+++ b/Задачи с листа №2.ipynb
@@ -427,6 +427,15 @@
   },
   {
    "cell_type": "markdown",
+   "id": "50b1fb29",
+   "metadata": {},
+   "source": [
+    "Переменная totwrk имеет фиксированные единицы измерения. Обозначает количества рабочих минут в неделю. Поэтому фраза \"увеличении работы\" не корректна\n",
+    "Скорее, увеличение занятости на одну минуту в неделю приводит к уменьшению времени сна... и т.д."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "30123511",
    "metadata": {},
    "source": [
